# unicicles

./: .gitignore  README.md
bisicles_cmip7_postproc/: README.md  __init__.py  cf_utils.py  cli.py  cmip7_vars.py  config.py  diagnostics.py  filename_parser.py  flatten.py  pyproject.toml
bisicles_cmip7_postproc/config/: cx209_GrIS_diagnostics.yaml  cx209_GrIS_flatten.yaml  diagnostics_defaults.yaml  flatten_defaults.yaml  ismip7_diagnostics_defaults.yaml  ismip7_flatten_defaults.yaml  test_diagnostics.yaml  test_flatten.yaml
pyglint/: .gitignore  coupling.py  downscale.py  mean_to_global_mec.py  plot_test_TerraFIRMA.py  run_test_TerraFIRMA.sh  test_TerraFIRMA.py  test_coupling.py  test_mean_to_global_mec.py  test_scream_data.py  test_scream_downscale_upscale.py  test_transformation.py  transformation.py  upscale.py
pyglint/configs/: cs568_AIS.yaml  cs568_AIS_masked_ncTF.yaml  cs568_AIS_ncTF.yaml  cs568_GrIS.yaml
unicicles_coupling_refactor/active/python3/: um_reset_icesnowpack_no_icesheet_coupling.py  unicicles_cap_global_to_um.py
wrappers/ukesm-ice_NETCDF/: Makefile.ubuntu24.04  Makefile.ubuntu24.04_opt_mpi_petsc
